--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
